# Apollyon

./: 2  CMakeLists.txt  README.md  build_and_run.sh
cmake/: FindDPP.cmake
src/: BaseCommand.h  TerminalCommands.cpp  TerminalCommands.h  main.cpp  main.h
src/Commands/: AboutCommand.h  EmbedCommand.cpp  EmbedCommand.h  PingCommand.h
src/dashboard/: README.md
